--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@types/react": "^18.0.13",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "clsx": "^1.1.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.32.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
