--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.1.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.2",
     "react-redux": "^8.0.2",
